05-TP-Integrador/bison.output
State 1 conflicts: 21 shift/reduce
State 27 conflicts: 3 shift/reduce
State 31 conflicts: 23 shift/reduce
State 37 conflicts: 21 shift/reduce
State 38 conflicts: 21 shift/reduce
State 39 conflicts: 21 shift/reduce
State 62 conflicts: 1 shift/reduce
State 64 conflicts: 22 shift/reduce
State 66 conflicts: 2 shift/reduce
State 78 conflicts: 3 shift/reduce
State 84 conflicts: 1 shift/reduce, 2 reduce/reduce
State 92 conflicts: 1 shift/reduce
State 113 conflicts: 2 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 2 shift/reduce
State 119 conflicts: 4 shift/reduce
State 120 conflicts: 2 shift/reduce
State 121 conflicts: 2 shift/reduce
State 122 conflicts: 3 shift/reduce
State 124 conflicts: 11 shift/reduce
State 126 conflicts: 6 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 136 conflicts: 2 shift/reduce
State 163 conflicts: 5 reduce/reduce
State 174 conflicts: 20 shift/reduce
State 175 conflicts: 1 shift/reduce, 1 reduce/reduce
State 179 conflicts: 5 reduce/reduce
State 180 conflicts: 5 reduce/reduce
State 272 conflicts: 1 shift/reduce
State 287 conflicts: 1 shift/reduce
State 289 conflicts: 1 shift/reduce
State 290 conflicts: 1 shift/reduce
State 291 conflicts: 1 shift/reduce
State 292 conflicts: 2 shift/reduce
State 293 conflicts: 4 shift/reduce
State 294 conflicts: 4 shift/reduce
State 295 conflicts: 2 shift/reduce
State 296 conflicts: 2 shift/reduce
State 297 conflicts: 2 shift/reduce
State 298 conflicts: 2 shift/reduce
State 299 conflicts: 2 shift/reduce
State 300 conflicts: 2 shift/reduce
State 301 conflicts: 3 shift/reduce
State 302 conflicts: 3 shift/reduce
State 310 conflicts: 2 shift/reduce


Grammar

    0 $accept: unidad_de_programa $end

    1 unidad_de_programa: INCLUDE unidad_de_programa
    2                   | DEFINE expresion_primaria unidad_de_programa
    3                   | unidad_de_traduccion
    4                   | error unidad_de_traduccion
    5                   | noRec unidad_de_programa

    6 idNoRec: noRec
    7        | idNoRec noRec
    8        | idNoRec IDENTIFICADOR
    9        | IDENTIFICADOR idNoRec

   10 noRec: NO_RECONOCIDO

   11 unidad_de_traduccion: declaracion_externa
   12                     | unidad_de_traduccion declaracion_externa

   13 declaracion_externa: definicion_de_funcion
   14                    | declaracion

   15 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion sentencia_compuesta
   16                      | declarador lista_de_declaracion sentencia_compuesta
   17                      | especificadores_de_declaracion declarador sentencia_compuesta
   18                      | declarador sentencia_compuesta

   19 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   20            | especificadores_de_declaracion error ';'
   21            | especificadores_de_declaracion ';'

   22 lista_de_declaracion: declaracion
   23                     | lista_de_declaracion declaracion

   24 especificadores_de_declaracion: especificador_categoria_almacenamiento especificadores_de_declaracion
   25                               | especificador_categoria_almacenamiento
   26                               | especificador_de_tipo especificadores_de_declaracion
   27                               | especificador_de_tipo
   28                               | calificador_de_tipo especificadores_de_declaracion
   29                               | calificador_de_tipo

   30 especificador_categoria_almacenamiento: AUTO
   31                                       | REGISTER
   32                                       | STATIC
   33                                       | EXTERN
   34                                       | TYPEDEF

   35 especificador_de_tipo: INT
   36                      | CHAR
   37                      | FLOAT
   38                      | DOUBLE
   39                      | SHORT
   40                      | VOID
   41                      | LONG
   42                      | SIGNED
   43                      | UNSIGNED
   44                      | especificador_estructura_o_union
   45                      | especificador_enum
   46                      | nombre_typedef

   47 calificador_de_tipo: CONST
   48                    | VOLATILE

   49 especificador_estructura_o_union: estructura_o_union IDENTIFICADOR '{' lista_declaraciones_struct '}'
   50                                 | estructura_o_union IDENTIFICADOR
   51                                 | '{' lista_declaraciones_struct '}'

   52 estructura_o_union: STRUCT
   53                   | UNION

   54 lista_declaraciones_struct: declaracion_struct
   55                           | lista_declaraciones_struct declaracion_struct

   56 lista_declaradores_init: declarador_init
   57                        | lista_declaradores_init ',' declarador_init
   58                        | error

   59 declarador_init: declarador
   60                | declarador '=' inicializador
   61                | declarador '='

   62 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   63 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   64                                | especificador_de_tipo
   65                                | calificador_de_tipo lista_calificador_especificador
   66                                | calificador_de_tipo

   67 lista_declaradores_struct: declarador_struct
   68                          | lista_declaradores_struct ',' declarador_struct

   69 declarador_struct: declarador
   70                  | declarador ':' expresion_constante
   71                  | ':' expresion_constante

   72 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   73                   | '{' lista_de_enumerador '}'
   74                   | ENUM IDENTIFICADOR

   75 lista_de_enumerador: enumerador
   76                    | lista_de_enumerador ',' enumerador

   77 enumerador: IDENTIFICADOR
   78           | IDENTIFICADOR '=' expresion_constante
   79           | IDENTIFICADOR '='

   80 declarador: apuntador declarador_directo
   81           | declarador_directo
   82           | error

   83 declarador_directo: IDENTIFICADOR
   84                   | '(' declarador ')'
   85                   | IDENTIFICADOR '[' expresion_constante ']'
   86                   | IDENTIFICADOR '[' ']'
   87                   | IDENTIFICADOR '(' lista_tipos_de_parametro ')'
   88                   | IDENTIFICADOR '(' lista_de_identificadores ')'
   89                   | IDENTIFICADOR '(' ')'
   90                   | IDENTIFICADOR '(' lista_tipos_de_parametro
   91                   | IDENTIFICADOR '(' lista_de_identificadores
   92                   | IDENTIFICADOR '('
   93                   | idNoRec

   94 apuntador: '*' lista_calificadores_de_tipo
   95          | '*'
   96          | '*' lista_calificadores_de_tipo apuntador
   97          | '*' apuntador

   98 lista_calificadores_de_tipo: calificador_de_tipo
   99                            | lista_calificadores_de_tipo calificador_de_tipo

  100 lista_tipos_de_parametro: lista_de_parametros
  101                         | lista_de_parametros ',' ELIPSIS

  102 lista_de_parametros: declaracion_parametro
  103                    | lista_de_parametros ',' declaracion_parametro

  104 declaracion_parametro: especificadores_de_declaracion apuntadorOpt IDENTIFICADOR
  105                      | especificadores_de_declaracion apuntadorOpt IDENTIFICADOR '[' expresion_constante ']'
  106                      | especificadores_de_declaracion apuntadorOpt IDENTIFICADOR '(' lista_tipos_de_parametro ')'
  107                      | especificadores_de_declaracion apuntadorOpt IDENTIFICADOR '(' lista_de_identificadores ')'
  108                      | especificadores_de_declaracion apuntadorOpt declarador_abstracto
  109                      | especificadores_de_declaracion apuntadorOpt

  110 apuntadorOpt: apuntador
  111             | %empty

  112 lista_de_identificadores: expresion_primaria
  113                         | lista_de_identificadores ',' expresion_primaria

  114 inicializador: expresion_de_asignacion
  115              | '{' lista_de_inicializadores '}'
  116              | '{' lista_de_inicializadores ',' '}'

  117 lista_de_inicializadores: inicializador
  118                         | lista_de_inicializadores ',' inicializador

  119 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
  120               | lista_calificador_especificador

  121 declarador_abstracto: apuntador
  122                     | apuntador declarador_abstracto_directo
  123                     | declarador_abstracto_directo

  124 declarador_abstracto_directo: '(' declarador_abstracto ')'
  125                             | declarador_abstracto_directo '[' expresion_constante ']'
  126                             | '[' ']'
  127                             | declarador_abstracto_directo '[' ']'
  128                             | '[' expresion_constante ']'
  129                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  130                             | '(' ')'
  131                             | declarador_abstracto_directo '(' ')'
  132                             | '(' lista_tipos_de_parametro ')'

  133 nombre_typedef: 't'

  134 sentencia: sentencia_etiquetada
  135          | sentencia_expresion
  136          | sentencia_compuesta
  137          | sentencia_de_iteracion
  138          | sentencia_de_seleccion
  139          | sentencia_de_salto
  140          | error

  141 sentencia_etiquetada: IDENTIFICADOR ':' sentencia
  142                     | CASE expresion_constante ':' sentencia
  143                     | DEFAULT ':' sentencia

  144 sentencia_expresion: expresion ';'
  145                    | ';'

  146 sentencia_compuesta: '{' lista_de_declaracion lista_de_sentencias '}'
  147                    | '{' '}'
  148                    | '{' lista_de_declaracion '}'
  149                    | '{' lista_de_sentencias '}'

  150 lista_de_sentencias: sentencia
  151                    | lista_de_sentencias sentencia

  152 sentencia_de_seleccion: IF '(' expresion ')' sentencia
  153                       | IF '(' expresion ')' sentencia ELSE sentencia
  154                       | SWITCH '(' expresion ')' sentencia

  155 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  156                       | DO sentencia WHILE '(' expresion ')' ';'
  157                       | FOR '(' expresion ';' expresion ';' expresion ')' sentencia
  158                       | FOR '(' expresion ';' expresion ';' ')' sentencia
  159                       | FOR '(' expresion ';' ';' expresion ')' sentencia
  160                       | FOR '(' expresion ';' ';' ')' sentencia
  161                       | FOR '(' ';' expresion ';' expresion ')' sentencia
  162                       | FOR '(' ';' expresion ';' ')' sentencia
  163                       | FOR '(' ';' ';' expresion ')' sentencia
  164                       | FOR '(' ';' ';' ')' sentencia

  165 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  166                   | CONTINUE ';'
  167                   | BREAK ';'
  168                   | RETURN expresion ';'
  169                   | RETURN expresion
  170                   | RETURN ';'
  171                   | RETURN

  172 expresion: expresion_de_asignacion
  173          | expresion ',' expresion_de_asignacion

  174 expresion_de_asignacion: expresion_condicional
  175                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  176 operador_de_asignacion: POR_IGUAL
  177                       | DIV_IGUAL
  178                       | MAS_IGUAL
  179                       | MENOS_IGUAL
  180                       | MOD_IGUAL
  181                       | CORR_IZQ_IGUAL
  182                       | CORR_DER_IGUAL
  183                       | Y_IGUAL
  184                       | POT_IGUAL
  185                       | O_IGUAL
  186                       | '='

  187 expresion_condicional: expresion_logica_OR
  188                      | expresion_logica_OR '?' expresion ':' expresion_condicional

  189 expresion_constante: expresion_condicional

  190 expresion_logica_OR: expresion_logica_AND
  191                    | expresion_logica_OR CTE_OR expresion_logica_AND

  192 expresion_logica_AND: expresion_OR_inclusivo
  193                     | expresion_logica_AND CTE_AND expresion_OR_inclusivo

  194 expresion_OR_inclusivo: expresion_OR_exclusivo
  195                       | expresion_OR_inclusivo '|' expresion_OR_exclusivo

  196 expresion_OR_exclusivo: expresion_AND
  197                       | expresion_OR_exclusivo '^' expresion_AND

  198 expresion_AND: expresion_de_igualdad
  199              | expresion_AND '&' expresion_de_igualdad

  200 expresion_de_igualdad: expresion_relacional
  201                      | expresion_de_igualdad IGUAL_IGUAL expresion_relacional
  202                      | expresion_de_igualdad DISTINTO expresion_relacional

  203 expresion_relacional: expresion_de_corrimiento
  204                     | expresion_relacional '<' expresion_de_corrimiento
  205                     | expresion_relacional '>' expresion_de_corrimiento
  206                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  207                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  208 expresion_de_corrimiento: expresion_aditiva
  209                         | expresion_de_corrimiento CORR_IZQ expresion_aditiva
  210                         | expresion_de_corrimiento CORR_DER expresion_aditiva

  211 expresion_aditiva: expresion_multiplicativa
  212                  | expresion_aditiva '+' expresion_multiplicativa
  213                  | expresion_aditiva '-' expresion_multiplicativa

  214 expresion_multiplicativa: expresion_cast
  215                         | expresion_multiplicativa '*' expresion_cast
  216                         | expresion_multiplicativa '/' expresion_cast
  217                         | expresion_multiplicativa '%' expresion_cast

  218 expresion_cast: expresion_unaria
  219               | '(' nombre_de_tipo ')' expresion_cast

  220 expresion_unaria: expresion_posfija
  221                 | MENOS_MENOS expresion_unaria
  222                 | MAS_MAS expresion_unaria
  223                 | operador_unario expresion_cast
  224                 | SIZEOF expresion_unaria
  225                 | SIZEOF '(' nombre_de_tipo ')'
  226                 | error

  227 operador_unario: '&'
  228                | '*'
  229                | '+'
  230                | '-'
  231                | '~'
  232                | '!'

  233 expresion_posfija: expresion_primaria
  234                  | expresion_posfija '[' expresion ']'
  235                  | expresion_posfija '(' lista_expresiones_argumento ')'
  236                  | expresion_posfija '(' lista_expresiones_argumento
  237                  | expresion_posfija '(' ')'
  238                  | expresion_posfija '.' IDENTIFICADOR
  239                  | expresion_posfija FLECHA IDENTIFICADOR
  240                  | expresion_posfija MENOS_MENOS
  241                  | expresion_posfija MAS_MAS

  242 expresion_primaria: IDENTIFICADOR
  243                   | constante
  244                   | LITERAL_CADENA
  245                   | '(' expresion ')'

  246 lista_expresiones_argumento: expresion_de_asignacion
  247                            | lista_expresiones_argumento ',' expresion_de_asignacion

  248 constante: CONST_OCTAL
  249          | CONST_HEXADECIMAL
  250          | CONST_DECIMAL
  251          | CONST_CARACTER
  252          | CONST_PTOFLOTANTE
  253          | ENUM


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 232
    '%' (37) 217
    '&' (38) 199 227
    '(' (40) 84 87 88 89 90 91 92 106 107 124 129 130 131 132 152 153 154 155 156 157 158 159 160 161 162 163 164 219 225 235 236 237 245
    ')' (41) 84 87 88 89 106 107 124 129 130 131 132 152 153 154 155 156 157 158 159 160 161 162 163 164 219 225 235 237 245
    '*' (42) 94 95 96 97 215 228
    '+' (43) 212 229
    ',' (44) 57 68 76 101 103 113 116 118 173 247
    '-' (45) 213 230
    '.' (46) 238
    '/' (47) 216
    ':' (58) 70 71 141 142 143 188
    ';' (59) 19 20 21 62 144 145 156 157 158 159 160 161 162 163 164 165 166 167 168 170
    '<' (60) 204
    '=' (61) 60 61 78 79 186
    '>' (62) 205
    '?' (63) 188
    '[' (91) 85 86 105 125 126 127 128 234
    ']' (93) 85 86 105 125 126 127 128 234
    '^' (94) 197
    't' (116) 133
    '{' (123) 49 51 72 73 115 116 146 147 148 149
    '|' (124) 195
    '}' (125) 49 51 72 73 115 116 146 147 148 149
    '~' (126) 231
    error (256) 4 20 58 82 140 226
    INCLUDE (258) 1
    DEFINE (259) 2
    AUTO (260) 30
    REGISTER (261) 31
    STATIC (262) 32
    EXTERN (263) 33
    TYPEDEF (264) 34
    VOID (265) 40
    CHAR (266) 36
    SHORT (267) 39
    INT (268) 35
    LONG (269) 41
    FLOAT (270) 37
    DOUBLE (271) 38
    SIGNED (272) 42
    UNSIGNED (273) 43
    CONST (274) 47
    VOLATILE (275) 48
    ENUM (276) 72 74 253
    CASE (277) 142
    DEFAULT (278) 143
    IF (279) 152 153
    SWITCH (280) 154
    ELSE (281) 153
    FOR (282) 157 158 159 160 161 162 163 164
    DO (283) 156
    WHILE (284) 155 156
    GOTO (285) 165
    CONTINUE (286) 166
    BREAK (287) 167
    STRUCT (288) 52
    UNION (289) 53
    RETURN (290) 168 169 170 171
    SIZEOF (291) 224 225
    CTE_OR (292) 191
    CTE_AND (293) 193
    ELIPSIS (294) 101
    IGUAL_IGUAL (295) 201
    DISTINTO (296) 202
    MENOR_IGUAL (297) 206
    MAYOR_IGUAL (298) 207
    CORR_DER (299) 210
    CORR_IZQ (300) 209
    MAS_MAS (301) 222 241
    MENOS_MENOS (302) 221 240
    FLECHA (303) 239
    POR_IGUAL (304) 176
    DIV_IGUAL (305) 177
    MAS_IGUAL (306) 178
    MENOS_IGUAL (307) 179
    MOD_IGUAL (308) 180
    CORR_DER_IGUAL (309) 182
    CORR_IZQ_IGUAL (310) 181
    Y_IGUAL (311) 183
    POT_IGUAL (312) 184
    O_IGUAL (313) 185
    NO_RECONOCIDO (314) 10
    IDENTIFICADOR (315) 8 9 49 50 72 74 77 78 79 83 85 86 87 88 89 90 91 92 104 105 106 107 141 165 238 239 242
    LITERAL_CADENA (316) 244
    CONST_OCTAL (317) 248
    CONST_HEXADECIMAL (318) 249
    CONST_DECIMAL (319) 250
    CONST_PTOFLOTANTE (320) 252
    CONST_CARACTER (321) 251
    IFX (322)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    unidad_de_programa (94)
        on left: 1 2 3 4 5
        on right: 0 1 2 5
    idNoRec (95)
        on left: 6 7 8 9
        on right: 7 8 9 93
    noRec (96)
        on left: 10
        on right: 5 6 7
    unidad_de_traduccion (97)
        on left: 11 12
        on right: 3 4 12
    declaracion_externa (98)
        on left: 13 14
        on right: 11 12
    definicion_de_funcion (99)
        on left: 15 16 17 18
        on right: 13
    declaracion (100)
        on left: 19 20 21
        on right: 14 22 23
    lista_de_declaracion (101)
        on left: 22 23
        on right: 15 16 23 146 148
    especificadores_de_declaracion (102)
        on left: 24 25 26 27 28 29
        on right: 15 17 19 20 21 24 26 28 104 105 106 107 108 109
    especificador_categoria_almacenamiento (103)
        on left: 30 31 32 33 34
        on right: 24 25
    especificador_de_tipo (104)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 26 27 63 64
    calificador_de_tipo (105)
        on left: 47 48
        on right: 28 29 65 66 98 99
    especificador_estructura_o_union (106)
        on left: 49 50 51
        on right: 44
    estructura_o_union (107)
        on left: 52 53
        on right: 49 50
    lista_declaraciones_struct (108)
        on left: 54 55
        on right: 49 51 55
    lista_declaradores_init (109)
        on left: 56 57 58
        on right: 19 57
    declarador_init (110)
        on left: 59 60 61
        on right: 56 57
    declaracion_struct (111)
        on left: 62
        on right: 54 55
    lista_calificador_especificador (112)
        on left: 63 64 65 66
        on right: 62 63 65 119 120
    lista_declaradores_struct (113)
        on left: 67 68
        on right: 62 68
    declarador_struct (114)
        on left: 69 70 71
        on right: 67 68
    especificador_enum (115)
        on left: 72 73 74
        on right: 45
    lista_de_enumerador (116)
        on left: 75 76
        on right: 72 73 76
    enumerador (117)
        on left: 77 78 79
        on right: 75 76
    declarador (118)
        on left: 80 81 82
        on right: 15 16 17 18 59 60 61 69 70 84
    declarador_directo (119)
        on left: 83 84 85 86 87 88 89 90 91 92 93
        on right: 80 81
    apuntador (120)
        on left: 94 95 96 97
        on right: 80 96 97 110 121 122
    lista_calificadores_de_tipo (121)
        on left: 98 99
        on right: 94 96 99
    lista_tipos_de_parametro (122)
        on left: 100 101
        on right: 87 90 106 129 132
    lista_de_parametros (123)
        on left: 102 103
        on right: 100 101 103
    declaracion_parametro (124)
        on left: 104 105 106 107 108 109
        on right: 102 103
    apuntadorOpt (125)
        on left: 110 111
        on right: 104 105 106 107 108 109
    lista_de_identificadores (126)
        on left: 112 113
        on right: 88 91 107 113
    inicializador (127)
        on left: 114 115 116
        on right: 60 117 118
    lista_de_inicializadores (128)
        on left: 117 118
        on right: 115 116 118
    nombre_de_tipo (129)
        on left: 119 120
        on right: 219 225
    declarador_abstracto (130)
        on left: 121 122 123
        on right: 108 119 124
    declarador_abstracto_directo (131)
        on left: 124 125 126 127 128 129 130 131 132
        on right: 122 123 125 127 129 131
    nombre_typedef (132)
        on left: 133
        on right: 46
    sentencia (133)
        on left: 134 135 136 137 138 139 140
        on right: 141 142 143 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164
    sentencia_etiquetada (134)
        on left: 141 142 143
        on right: 134
    sentencia_expresion (135)
        on left: 144 145
        on right: 135
    sentencia_compuesta (136)
        on left: 146 147 148 149
        on right: 15 16 17 18 136
    lista_de_sentencias (137)
        on left: 150 151
        on right: 146 149 151
    sentencia_de_seleccion (138)
        on left: 152 153 154
        on right: 138
    sentencia_de_iteracion (139)
        on left: 155 156 157 158 159 160 161 162 163 164
        on right: 137
    sentencia_de_salto (140)
        on left: 165 166 167 168 169 170 171
        on right: 139
    expresion (141)
        on left: 172 173
        on right: 144 152 153 154 155 156 157 158 159 160 161 162 163 168 169 173 188 234 245
    expresion_de_asignacion (142)
        on left: 174 175
        on right: 114 172 173 175 246 247
    operador_de_asignacion (143)
        on left: 176 177 178 179 180 181 182 183 184 185 186
        on right: 175
    expresion_condicional (144)
        on left: 187 188
        on right: 174 188 189
    expresion_constante (145)
        on left: 189
        on right: 70 71 78 85 105 125 128 142
    expresion_logica_OR (146)
        on left: 190 191
        on right: 187 188 191
    expresion_logica_AND (147)
        on left: 192 193
        on right: 190 191 193
    expresion_OR_inclusivo (148)
        on left: 194 195
        on right: 192 193 195
    expresion_OR_exclusivo (149)
        on left: 196 197
        on right: 194 195 197
    expresion_AND (150)
        on left: 198 199
        on right: 196 197 199
    expresion_de_igualdad (151)
        on left: 200 201 202
        on right: 198 199 201 202
    expresion_relacional (152)
        on left: 203 204 205 206 207
        on right: 200 201 202 204 205 206 207
    expresion_de_corrimiento (153)
        on left: 208 209 210
        on right: 203 204 205 206 207 209 210
    expresion_aditiva (154)
        on left: 211 212 213
        on right: 208 209 210 212 213
    expresion_multiplicativa (155)
        on left: 214 215 216 217
        on right: 211 212 213 215 216 217
    expresion_cast (156)
        on left: 218 219
        on right: 214 215 216 217 219 223
    expresion_unaria (157)
        on left: 220 221 222 223 224 225 226
        on right: 175 218 221 222 224
    operador_unario (158)
        on left: 227 228 229 230 231 232
        on right: 223
    expresion_posfija (159)
        on left: 233 234 235 236 237 238 239 240 241
        on right: 220 234 235 236 237 238 239 240 241
    expresion_primaria (160)
        on left: 242 243 244 245
        on right: 2 112 113 233
    lista_expresiones_argumento (161)
        on left: 246 247
        on right: 235 236 247
    constante (162)
        on left: 248 249 250 251 252 253
        on right: 243


State 0

    0 $accept: . unidad_de_programa $end

    error          shift, and go to state 1
    INCLUDE        shift, and go to state 2
    DEFINE         shift, and go to state 3
    AUTO           shift, and go to state 4
    REGISTER       shift, and go to state 5
    STATIC         shift, and go to state 6
    EXTERN         shift, and go to state 7
    TYPEDEF        shift, and go to state 8
    VOID           shift, and go to state 9
    CHAR           shift, and go to state 10
    SHORT          shift, and go to state 11
    INT            shift, and go to state 12
    LONG           shift, and go to state 13
    FLOAT          shift, and go to state 14
    DOUBLE         shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    CONST          shift, and go to state 18
    VOLATILE       shift, and go to state 19
    ENUM           shift, and go to state 20
    STRUCT         shift, and go to state 21
    UNION          shift, and go to state 22
    NO_RECONOCIDO  shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 24
    '{'            shift, and go to state 25
    '('            shift, and go to state 26
    '*'            shift, and go to state 27
    't'            shift, and go to state 28

    unidad_de_programa                      go to state 29
    idNoRec                                 go to state 30
    noRec                                   go to state 31
    unidad_de_traduccion                    go to state 32
    declaracion_externa                     go to state 33
    definicion_de_funcion                   go to state 34
    declaracion                             go to state 35
    especificadores_de_declaracion          go to state 36
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_o_union        go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    declarador                              go to state 43
    declarador_directo                      go to state 44
    apuntador                               go to state 45
    nombre_typedef                          go to state 46


State 1

    4 unidad_de_programa: error . unidad_de_traduccion
   82 declarador: error .

    error          shift, and go to state 47
    AUTO           shift, and go to state 4
    REGISTER       shift, and go to state 5
    STATIC         shift, and go to state 6
    EXTERN         shift, and go to state 7
    TYPEDEF        shift, and go to state 8
    VOID           shift, and go to state 9
    CHAR           shift, and go to state 10
    SHORT          shift, and go to state 11
    INT            shift, and go to state 12
    LONG           shift, and go to state 13
    FLOAT          shift, and go to state 14
    DOUBLE         shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    CONST          shift, and go to state 18
    VOLATILE       shift, and go to state 19
    ENUM           shift, and go to state 20
    STRUCT         shift, and go to state 21
    UNION          shift, and go to state 22
    NO_RECONOCIDO  shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 24
    '{'            shift, and go to state 25
    '('            shift, and go to state 26
    '*'            shift, and go to state 27
    't'            shift, and go to state 28

    AUTO      [reduce using rule 82 (declarador)]
    REGISTER  [reduce using rule 82 (declarador)]
    STATIC    [reduce using rule 82 (declarador)]
    EXTERN    [reduce using rule 82 (declarador)]
    TYPEDEF   [reduce using rule 82 (declarador)]
    VOID      [reduce using rule 82 (declarador)]
    CHAR      [reduce using rule 82 (declarador)]
    SHORT     [reduce using rule 82 (declarador)]
    INT       [reduce using rule 82 (declarador)]
    LONG      [reduce using rule 82 (declarador)]
    FLOAT     [reduce using rule 82 (declarador)]
    DOUBLE    [reduce using rule 82 (declarador)]
    SIGNED    [reduce using rule 82 (declarador)]
    UNSIGNED  [reduce using rule 82 (declarador)]
    CONST     [reduce using rule 82 (declarador)]
    VOLATILE  [reduce using rule 82 (declarador)]
    ENUM      [reduce using rule 82 (declarador)]
    STRUCT    [reduce using rule 82 (declarador)]
    UNION     [reduce using rule 82 (declarador)]
    '{'       [reduce using rule 82 (declarador)]
    't'       [reduce using rule 82 (declarador)]

    idNoRec                                 go to state 30
    noRec                                   go to state 48
    unidad_de_traduccion                    go to state 49
    declaracion_externa                     go to state 33
    definicion_de_funcion                   go to state 34
    declaracion                             go to state 35
    especificadores_de_declaracion          go to state 36
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_o_union        go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    declarador                              go to state 43
    declarador_directo                      go to state 44
    apuntador                               go to state 45
    nombre_typedef                          go to state 46


State 2

    1 unidad_de_programa: INCLUDE . unidad_de_programa

    error          shift, and go to state 1
    INCLUDE        shift, and go to state 2
    DEFINE         shift, and go to state 3
    AUTO           shift, and go to state 4
    REGISTER       shift, and go to state 5
    STATIC         shift, and go to state 6
    EXTERN         shift, and go to state 7
    TYPEDEF        shift, and go to state 8
    VOID           shift, and go to state 9
    CHAR           shift, and go to state 10
    SHORT          shift, and go to state 11
    INT            shift, and go to state 12
    LONG           shift, and go to state 13
    FLOAT          shift, and go to state 14
    DOUBLE         shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    CONST          shift, and go to state 18
    VOLATILE       shift, and go to state 19
    ENUM           shift, and go to state 20
    STRUCT         shift, and go to state 21
    UNION          shift, and go to state 22
    NO_RECONOCIDO  shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 24
    '{'            shift, and go to state 25
    '('            shift, and go to state 26
    '*'            shift, and go to state 27
    't'            shift, and go to state 28

    unidad_de_programa                      go to state 50
    idNoRec                                 go to state 30
    noRec                                   go to state 31
    unidad_de_traduccion                    go to state 32
    declaracion_externa                     go to state 33
    definicion_de_funcion                   go to state 34
    declaracion                             go to state 35
    especificadores_de_declaracion          go to state 36
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_o_union        go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    declarador                              go to state 43
    declarador_directo                      go to state 44
    apuntador                               go to state 45
    nombre_typedef                          go to state 46


State 3

    2 unidad_de_programa: DEFINE . expresion_primaria unidad_de_programa

    ENUM               shift, and go to state 51
    IDENTIFICADOR      shift, and go to state 52
    LITERAL_CADENA     shift, and go to state 53
    CONST_OCTAL        shift, and go to state 54
    CONST_HEXADECIMAL  shift, and go to state 55
    CONST_DECIMAL      shift, and go to state 56
    CONST_PTOFLOTANTE  shift, and go to state 57
    CONST_CARACTER     shift, and go to state 58
    '('                shift, and go to state 59

    expresion_primaria  go to state 60
    constante           go to state 61


State 4

   30 especificador_categoria_almacenamiento: AUTO .

    $default  reduce using rule 30 (especificador_categoria_almacenamiento)


State 5

   31 especificador_categoria_almacenamiento: REGISTER .

    $default  reduce using rule 31 (especificador_categoria_almacenamiento)


State 6

   32 especificador_categoria_almacenamiento: STATIC .

    $default  reduce using rule 32 (especificador_categoria_almacenamiento)


State 7

   33 especificador_categoria_almacenamiento: EXTERN .

    $default  reduce using rule 33 (especificador_categoria_almacenamiento)


State 8

   34 especificador_categoria_almacenamiento: TYPEDEF .

    $default  reduce using rule 34 (especificador_categoria_almacenamiento)


State 9

   40 especificador_de_tipo: VOID .

    $default  reduce using rule 40 (especificador_de_tipo)


State 10

   36 especificador_de_tipo: CHAR .

    $default  reduce using rule 36 (especificador_de_tipo)


State 11

   39 especificador_de_tipo: SHORT .

    $default  reduce using rule 39 (especificador_de_tipo)


State 12

   35 especificador_de_tipo: INT .

    $default  reduce using rule 35 (especificador_de_tipo)


State 13

   41 especificador_de_tipo: LONG .

    $default  reduce using rule 41 (especificador_de_tipo)


State 14

   37 especificador_de_tipo: FLOAT .

    $default  reduce using rule 37 (especificador_de_tipo)


State 15

   38 especificador_de_tipo: DOUBLE .

    $default  reduce using rule 38 (especificador_de_tipo)


State 16

   42 especificador_de_tipo: SIGNED .

    $default  reduce using rule 42 (especificador_de_tipo)


State 17

   43 especificador_de_tipo: UNSIGNED .

    $default  reduce using rule 43 (especificador_de_tipo)


State 18

   47 calificador_de_tipo: CONST .

    $default  reduce using rule 47 (calificador_de_tipo)


State 19

   48 calificador_de_tipo: VOLATILE .

    $default  reduce using rule 48 (calificador_de_tipo)


State 20

   72 especificador_enum: ENUM . IDENTIFICADOR '{' lista_de_enumerador '}'
   74                   | ENUM . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 62


State 21

   52 estructura_o_union: STRUCT .

    $default  reduce using rule 52 (estructura_o_union)


State 22

   53 estructura_o_union: UNION .

    $default  reduce using rule 53 (estructura_o_union)


State 23

   10 noRec: NO_RECONOCIDO .

    $default  reduce using rule 10 (noRec)


State 24

    9 idNoRec: IDENTIFICADOR . idNoRec
   83 declarador_directo: IDENTIFICADOR .
   85                   | IDENTIFICADOR . '[' expresion_constante ']'
   86                   | IDENTIFICADOR . '[' ']'
   87                   | IDENTIFICADOR . '(' lista_tipos_de_parametro ')'
   88                   | IDENTIFICADOR . '(' lista_de_identificadores ')'
   89                   | IDENTIFICADOR . '(' ')'
   90                   | IDENTIFICADOR . '(' lista_tipos_de_parametro
   91                   | IDENTIFICADOR . '(' lista_de_identificadores
   92                   | IDENTIFICADOR . '('
